# autonomous-research-agent

./: .gitignore  .pre-commit-config.yaml  AGENT_READY.txt  CHANGELOG.md  COMPLETION_SUMMARY.md  CONFIG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  GETTING_STARTED.md  LICENSE  PROJECT_SUMMARY.md  README.md  RESEARCH.md  RUNNING.md  TASK_COMPLETION.md  coverage.xml  demo_agent.py  demo_output.txt  docker-compose.yml  final_verification.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: research-request.md
.github/agents/: my-agent.agent.md
.github/workflows/: branch-cleanup.yml  dev-ci.yml  lifecycle-manager.yml  master-orchestrator.yml  prod-deploy.yml  promote-branches.yml  quality-gates.yml  release.yml  research-agent.yml  test-ci.yml
data/: .gitignore
data/research/: README.md
data/research/reports/: 2025-12-04_notebooklm-alternatives.json  2025-12-04_notebooklm-alternatives.md
docs/: ARCHITECTURE.md  AUTOMATION_SUMMARY.md  BRANCHING_STRATEGY.md  GITHUB_LIFECYCLE.md  PRODUCTION_FEATURES.md  QUICKSTART.md  ROADMAP.md  TESTING_GUIDE.md  index.html
examples/: multi_step_research.py  rag_example.py  simple_research.py
scripts/: setup-branches.sh
src/: analyzer.py  evaluation.py  formatter.py  github_api.py  github_lifecycle.py  main.py  memory.py  observability.py  phase3_advanced.py  scraper.py  web_search.py
src/autonomous_agent/: __init__.py  api.py  cli.py  config.py
src/autonomous_agent/agents/: __init__.py  research_agent.py
src/autonomous_agent/evaluation/: __init__.py  metrics.py
src/autonomous_agent/models/: __init__.py  model_manager.py
src/autonomous_agent/rag/: __init__.py  knowledge_base.py
src/autonomous_agent/utils/: __init__.py  text_utils.py
tests/: __init__.py  run_tests.py  test_config.py  test_evaluation.py  test_model_manager.py  test_observability.py  test_scraper.py  test_utils.py
